Search bar alignment fixed

--- a/Unsplash/style.css
+++ b/Unsplash/style.css
@@ -150,12 +150,12 @@ body {
 }
 .sam {
   position: relative;
-  width: 950px;
+  width: 940px;
 }
 .sam input {
   width: 100%;
   padding: 15px;
-  background-color: #fff;
+  background-color: #eee;
   border-radius: 20px;
   font-size: 20px;
   text-indent: 2rem;
@@ -167,7 +167,7 @@ body {
 .sam input:hover {
   background-color: white;
 }
-.sam button {
+.sam i {
   background: transparent;
   border: none;
   cursor: pointer;
@@ -175,7 +175,7 @@ body {
   font-size: 20px;
   color: silver;
   position: absolute;
-  top: 0px;
+  top: 7px;
   left: 0px;
   padding: 10px;
   z-index: 1;
@@ -191,9 +191,10 @@ body {
   font-size: 25px;
   position: absolute;
   color: silver;
-  top: 5px;
+  top: 2px;
   right: 0px;
   padding: 0px;
+  margin-right: 15px;
 }
 .baba {
   display: flex;
